--- a/client/src/modules/COMMON/components/Heading/Heading.css
+++ b/client/src/modules/COMMON/components/Heading/Heading.css
@@ -1,6 +1,5 @@
 h1,
 h2 {
-    color: var(--color2);
     font-size: 3rem;
 }
 
@@ -8,6 +7,10 @@ h1 {
     margin-top: 0;
 }
 
+div.heading h1 {
+    color: var(--color2);
+    filter: brightness(1.5);
+}
 
 p.image {
     position: relative;
@@ -49,7 +52,6 @@ div.navbar {
     width: fit-content;
     height: fit-content;
     background-color: transparent;
-    filter: brightness(2);
     margin: auto;
     margin-bottom: 2rem;
     position: relative;
@@ -59,36 +61,42 @@ div.navbar {
 }
 
 p.select {
-    position: absolute;
     font-size: 3rem;
-    width: 100%;
+    width: fit-content;
+    height: fit-content;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     color: var(--color2);
     white-space: nowrap;
-    filter: brightness(2);
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+
     margin: auto;
+    font-family: var(--font3);
+    filter: brightness(1.5);
+    text-align: center;
 }
 
 select.nav {
-    background-color: inherit;
+    background-color: rgb(41, 40, 40);
     border: none;
     padding: 0.5rem;
     border: 0.25rem solid transparent;
-    font-family: "GROUPE", sans-serif;
     font-size: 3rem;
     text-align: center;
     opacity: 0;
     width: fit-content;
     height: fit-content;
     margin: 0;
-    color: var(--color2);
+    color: var(--te);
+    font-family: var(--font3);
+    width: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
 }
 
 div.switch_wrapper {
@@ -130,7 +138,7 @@ div.switch button.sw:last-of-type {
 
 div.switch button.sw.active {
     color: var(--color2);
-    filter: brightness(2) contrast(2);
+    filter: brightness(1.5);
     text-shadow: 0 0 0.25rem black;
     font-family: "GROUPE", sans-serif;
     background-color: var(--color1);
