--- a/client/src/modules/COMMON/components/TableMain/TableMain.css
+++ b/client/src/modules/COMMON/components/TableMain/TableMain.css
@@ -26,6 +26,59 @@ ol.page_numbers>li.active {
 
 }
 
+div.nav {
+    display: flex;
+    height: 7rem;
+    background-color: black;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+div.nav>button {
+    background-color: initial;
+    border: 0.25rem solid transparent;
+    color: #fff;
+    font-family: Ubuntu Mono, sans-serif;
+    font-size: 3rem;
+    opacity: .75;
+    padding: 0.25rem;
+}
+
+div.nav>button.active {
+    border: 0.25rem solid var(--color2);
+    color: var(--color2);
+    opacity: 1;
+}
+
+div.timestamp {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    height: 100%;
+}
+
+div.trade_manager>div:first-of-type {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    height: fit-content;
+}
+
+div.trade_manager>div:last-of-type {
+    margin: 2rem 0;
+}
+
+p.value,
+p.trend {
+    width: fit-content;
+    font-family: 'Monomaniac One', sans-serif;
+
+    filter: contrast(1.25);
+    background-image: radial-gradient(var(--wr) -250%, var(--color4) 100%);
+    padding: 1rem;
+    font-size: 2.5rem;
+}
+
 table {
     table-layout: fixed;
     width: 100%;
@@ -47,6 +100,16 @@ table.half table {
     font-size: 2.5rem;
 }
 
+table.body>tbody:last-child {
+    filter: drop-shadow(0 0 2rem var(--color2));
+}
+
+div.nav,
+thead {
+    filter: drop-shadow(0 0 1rem silver);
+}
+
+
 th,
 td {
     height: 7rem;
@@ -61,29 +124,54 @@ th.half {
     height: 3.5rem;
 }
 
+div.sort {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+
+div.sort>i.fa-sort {
+    color: var(--color2);
+    font-size: 3rem;
+    position: absolute;
+    right: 0;
+    padding: 2rem;
+    z-index: 2;
+}
+
+tr.active_wrapper {
+    box-shadow: 0 0 1rem white;
+}
+
 td {
     box-shadow: inset 0 0 1rem var(--color4);
     text-shadow: 0 0 .5rem black;
+    font-weight: 100;
 }
 
-td.left {
+table.body td {
+    padding: 1rem;
+}
+
+table.body td.left {
     padding: 0 0.5rem;
     text-align: left;
     white-space: nowrap;
 }
 
-td.left>p {
+table.body td.left>p {
     overflow: hidden;
     text-overflow: ellipsis;
     width: 100%;
     margin: 0 1rem 0 0;
 }
 
-tr.active>td {
-    background-image: radial-gradient(var(--color4) -100%, var(--color2) 250%) !important;
-}
-
-td.left:hover>p {
+table.body td.left:hover>p {
     overflow: visible;
     width: fit-content;
     position: relative;
@@ -93,26 +181,159 @@ td.left:hover>p {
     padding-right: 2rem;
 }
 
-td.left:hover>p.end {
+table.body td.left:last-child:hover {
     direction: rtl;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    display: flex;
-    align-items: center;
-    padding-left: 2rem;
+}
+
+table.body td.left:last-child:hover>p {
+    direction: ltr;
+}
+
+th.small,
+td.small {
+    font-size: 75%;
+}
+
+td.type {
+    color: var(--te);
+    font-family: var(--font2);
+    font-size: 75%;
 }
 
 
 
+tr.active>td {
+    background-image: radial-gradient(var(--color4) -50%, var(--color2) 100%) !important;
+    box-shadow: inset 0 0 2rem black;
+}
+
+
+
+
+
+table.trade_summary>tbody:first-of-type>tr:first-of-type {
+    filter: drop-shadow(0 0 1rem white);
+}
+
+table#trades tr.active {
+    filter: none;
+    position: static;
+}
+
+table#trades tr.active>td>p>img.thumbnail {
+    filter: none;
+}
+
+
+table.trade_summary td {
+    box-shadow: inset 0 0 3rem black;
+}
+
+th>select {
+    background-image: inherit;
+    color: var(--color2);
+    text-align: center;
+    border: none;
+    font-family: var(--font3);
+    background-color: black;
+}
+
+
+td.left:hover>p>span.end {}
+
+
+
 table.primary {}
+
+table.primary>thead {
+    position: sticky;
+    top: 0;
+    z-index: 10;
+}
+
+table.primary tr.active {
+    position: sticky;
+    top: 7rem;
+    z-index: 9;
+}
+
+div.secondary.nav {
+    position: sticky;
+    top: 14rem;
+    z-index: 8;
+}
+
+table#trades div.secondary.nav {
+    position: sticky;
+    top: 7rem;
+    z-index: 8;
+}
+
+table.secondary>thead {
+    position: sticky;
+    top: 21rem;
+    z-index: 7;
+}
+
+table#trades table.secondary>thead {
+    position: sticky;
+    top: 14rem;
+    z-index: 7;
+}
+
+table.secondary tr.active {
+    position: sticky;
+    top: 28rem;
+    z-index: 6;
+}
+
+table.primary table.half,
+table.primary table.half>thead {
+    position: sticky;
+    top: 21rem;
+    z-index: 5;
+}
+
+table#trades table.half,
+table#trades table.half>thead {
+    position: sticky;
+    top: 14rem;
+    z-index: 5;
+}
+
+table.primary table.half tr.active_wrapper {
+    position: sticky;
+    top: 28rem;
+    z-index: 4;
+}
+
+table#trades table.half tr.active_wrapper {
+    position: sticky;
+    top: 21rem;
+    z-index: 4;
+}
+
+table.secondary table.half,
+table.secondary table.half>thead {
+    position: sticky;
+    top: 35rem;
+    z-index: 5;
+}
+
+
+table.secondary table.half tr.active_wrapper {
+    position: sticky;
+    top: 42rem;
+    z-index: 4;
+}
+
 
 table.primary th {
     background-image: radial-gradient(black 0, white 700%);
 }
 
 table.primary td {
-    background-image: radial-gradient(#000 -100%, var(--wr) 500%);
+    background-image: radial-gradient(var(--wr) -200%, #000 150%);
 }
 
 
@@ -121,24 +342,20 @@ table.secondary {}
 table.secondary th {}
 
 table.secondary td {
-    background-image: radial-gradient(black -100%, var(--color5) 500%);
+    background-image: radial-gradient(#000 -500%, rgb(38, 40, 50) 150%);
+    box-shadow: inset 0 0 3rem black;
 }
 
-table.half:first-of-type td {
-    filter: hue-rotate(20deg);
+table.secondary.half td,
+table.half:first-child td {
+    background-image: radial-gradient(#000 -250%, orchid 500%);
 }
 
-table.half:first-of-type td img {
-    filter: hue-rotate(340deg);
+
+table.half:last-child td {
+    background-image: radial-gradient(green -250%, #000 250%);
 }
 
-table.half:last-of-type td {
-    filter: hue-rotate(340deg);
-}
-
-table.half:last-of-type td img {
-    filter: hue-rotate(20deg);
-}
 
 table.tertiary {}
 
