--- a/client/src/modules/COMMON/components/TableMain/TableMain.css
+++ b/client/src/modules/COMMON/components/TableMain/TableMain.css
@@ -68,9 +68,14 @@ div.trade_manager>div:last-of-type {
     margin: 2rem 0;
 }
 
+td.value {
+    font-family: 'Monomaniac One', sans-serif;
+    font-size: 2.5rem;
+}
+
 p.value,
 p.trend {
-    width: fit-content;
+
     font-family: 'Monomaniac One', sans-serif;
 
     filter: contrast(1.25);
@@ -155,7 +160,7 @@ td {
 }
 
 table.body td {
-    padding: 1rem;
+    padding: .5rem;
 }
 
 table.body td.left {
@@ -236,6 +241,8 @@ th>select {
     border: none;
     font-family: var(--font3);
     background-color: black;
+    height: 100%;
+    font-size: inherit;
 }
 
 
