--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,6 +34,7 @@ body {
   margin: auto;
   margin: 0;
   padding: 0;
+  padding-bottom: 20rem;
   position: relative;
 
 }
@@ -63,8 +64,17 @@ li {
   color: rgb(0, 255, 0);
 }
 
-
-
+span.player_score,
+p.stat {
+  font-family: 'Monomaniac One', sans-serif;
+  font-size: 2.5rem;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
 
 ::-webkit-scrollbar {
   background-color: transparent;
