--- a/client/src/modules/COMMON/components/Heading/Heading.css
+++ b/client/src/modules/COMMON/components/Heading/Heading.css
@@ -7,6 +7,13 @@ h1 {
     margin-top: 0;
 }
 
+a {
+    font-size: 3rem;
+    display: block;
+    width: fit-content;
+    padding: 2rem;
+}
+
 div.heading h1 {
     color: var(--color2);
     filter: brightness(1.5);
