--- a/client/src/modules/COMMON/components/Search/Search.css
+++ b/client/src/modules/COMMON/components/Search/Search.css
@@ -68,13 +68,12 @@ div.search_wrapper ol.dropdown {
     position: absolute;
 }
 
+
+
 div.search_wrapper li button {
     display: flex;
     width: 100%;
     text-align: left;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
     font-size: 2.5rem;
     font-weight: 900;
     background-color: #9ca7b4;
@@ -88,9 +87,6 @@ div.search_wrapper li button {
 div.search_wrapper p {
     width: 100%;
     text-align: left;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
     font-size: 2.5rem;
     font-weight: 900;
     filter: contrast(2);
@@ -100,7 +96,21 @@ div.search_wrapper p {
     font-family: 'Ubuntu Mono', sans-serif;
     margin: 0;
     padding: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
+
+div.search_wrapper li>button.reverse {
+    text-overflow: initial;
+    direction: rtl;
+}
+
+div.search_wrapper li>button.reverse>p {
+    width: 100%;
+    text-align: right;
+}
+
 
 div.search_wrapper li button img.thumbnail {
     box-shadow: 0 0 1rem black;
