--- a/client/src/App.css
+++ b/client/src/App.css
@@ -70,6 +70,10 @@ li {
   color: rgb(0, 255, 0);
 }
 
+.greenb {
+  background-color: rgb(0, 255, 0);
+}
+
 span.player_score,
 p.stat {
   font-family: 'Monomaniac One', sans-serif;
@@ -90,4 +94,20 @@ p.stat {
 
 ::-webkit-scrollbar-thumb {
   background-color: var(--color2);
+}
+
+.rotate {
+  animation: rotate 4s linear infinite;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+    /* Start with no rotation (0 degrees) */
+  }
+
+  100% {
+    transform: rotate(360deg);
+    /* Rotate the element 360 degrees for a full rotation */
+  }
 }
