--- a/client/src/modules/COMMON/components/Search/Search.css
+++ b/client/src/modules/COMMON/components/Search/Search.css
@@ -121,3 +121,26 @@ div.search_wrapper li button img.thumbnail {
     vertical-align: middle;
     position: static;
 }
+
+div.search_filter_wrapper>div:first-child,
+div.trade_search_wrapper>div:first-child {
+    display: flex;
+    justify-content: right;
+    width: 25%;
+}
+
+div.search_filter_wrapper>div:last-child,
+div.trade_search_wrapper>div:last-child {
+    display: flex;
+    justify-content: left;
+    width: 25%;
+}
+
+div.search_filter_wrapper,
+div.trade_search_wrapper{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    width: 50%;
+    margin: auto;
+}
