--- a/client/src/modules/COMMON/components/TableMain/TableMain.css
+++ b/client/src/modules/COMMON/components/TableMain/TableMain.css
@@ -67,6 +67,10 @@ div.secondary.nav p.username {
     width: 100%;
 }
 
+th.half>p.username {
+    font-size: 150%;
+}
+
 div.secondary.nav p.username:hover {
     overflow: visible;
     position: absolute;
@@ -230,10 +234,11 @@ td>div.flex {
     height: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 }
 
+div.flex>span,
 div.flex>p,
 div.flex>em {
     width: 50%;
@@ -392,6 +397,14 @@ th>select {
     background-color: black;
     height: 100%;
     font-size: inherit;
+    width: 100%;
+    appearance: none;
+}
+
+
+
+th.half{
+    font-size: 75%;
 }
 
 th.left {
