--- a/client/src/App.css
+++ b/client/src/App.css
@@ -115,6 +115,18 @@ p.stat.value {
   animation: rotate 4s linear infinite;
 }
 
+h1>select,
+h2>select {
+    font: inherit;
+    color: inherit;
+    background-color: var(--color6);
+    text-align: center;
+    width: fit-content;
+    box-shadow: inset 0 0 2.5rem var(--color2), 0 0 1rem var(--te);
+    text-shadow: 0 0 .5rem black;
+    padding: 1rem 0;
+}
+
 @keyframes rotate {
   0% {
     transform: rotate(0deg);
