--- a/client/src/modules/Lineups/components/Lineups.css
+++ b/client/src/modules/Lineups/components/Lineups.css
@@ -1,5 +1,3 @@
-
-
 table.summary {
     width: 50rem;
     box-shadow: 0 0 3rem white;
@@ -15,7 +13,7 @@ table.summary tr {
 table.summary tr:first-child th {
     letter-spacing: 1rem;
     color: var(--color2);
-    
+
 }
 
 table.summary th,
@@ -24,9 +22,7 @@ table.summary td {
     text-shadow: 0 0 1rem black;
 }
 
-table.summary th {
-    
-}
+table.summary th {}
 
 table.summary td {
     font-family: var(--font4);
@@ -52,4 +48,30 @@ span.player_inj_status {
     position: absolute;
     top: 0;
     right: 0;
+}
+
+p.score {
+    font-family: var(--font3);
+    letter-spacing: -.25rem;
+    font-weight: 100;
+}
+
+em.score {
+    letter-spacing: -.25rem;
+}
+
+div.flex>p,
+div.flex>em {
+    box-shadow: 0 0 1rem black;
+}
+div.flex.pregame>p.score {
+    box-shadow: inset 0 0 3rem grey;
+}
+
+div.flex.ingame>p.score {
+    box-shadow: inset 0 0 3rem goldenrod;
+}
+
+div.flex.postgame>p.score {
+    box-shadow: inset 0 0 3rem rgb(0, 255, 0);
 }
