--- a/client/src/modules/Lineups/components/Lineups.css
+++ b/client/src/modules/Lineups/components/Lineups.css
@@ -50,14 +50,13 @@ span.player_inj_status {
     right: 0;
 }
 
-p.score {
-    font-family: var(--font3);
-    letter-spacing: -.25rem;
+p.score, em.score {
+    font-family: var(--font4);
     font-weight: 100;
 }
 
 em.score {
-    letter-spacing: -.25rem;
+   
 }
 
 div.flex>p,
