--- a/client/src/modules/COMMON/components/TableMain/TableMain.css
+++ b/client/src/modules/COMMON/components/TableMain/TableMain.css
@@ -610,3 +610,35 @@ table.tertiary {}
 table.tertiary th {}
 
 table.tertiary td {}
+
+
+table.summary {
+    width: 50rem;
+    box-shadow: 0 0 3rem white;
+    font-size: 3rem;
+}
+
+table.summary tr td,
+table.summary tr th{
+    filter: drop-shadow(0 0 2rem black);
+    box-shadow: inset 0 0 5rem var(--color3);
+}
+
+table.summary tr:first-child th {
+    letter-spacing: 1rem;
+    color: var(--color2);
+
+}
+
+table.summary th,
+table.summary td {
+    background-image: radial-gradient(var(--color3) 0%, var(--color6) 250%);
+    text-shadow: 0 0 1rem black;
+}
+
+table.summary th {}
+
+table.summary td {
+    font-family: var(--font4);
+    letter-spacing: .5rem;
+}
