--- a/client/src/modules/COMMON/components/TableMain/TableMain.css
+++ b/client/src/modules/COMMON/components/TableMain/TableMain.css
@@ -25,7 +25,6 @@ ol.page_numbers>li.active {
     border: 0.1rem ridge var(--color2);
 
 }
-
 div.trade_search_wrapper {
     display: flex;
     position: relative;
@@ -34,7 +33,6 @@ div.trade_search_wrapper {
     margin: auto;
     flex-direction: column;
 }
-
 div.nav {
     display: flex;
     height: 7rem;
@@ -72,7 +70,7 @@ div.secondary.nav p.username {
     color: var(--te);
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;
+    white-space: nowrap;    
     width: 100%;
 }
 
@@ -86,15 +84,15 @@ div.secondary.nav p.username:hover {
     z-index: 2;
     background-color: black;
     width: fit-content;
-
+    
 }
 
 div.nav>div>span {
     width: 40%;
-    position: relative;
+    position: relative;  
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; 
 }
 
 div.nav>div>button {
@@ -252,7 +250,7 @@ div.flex>span,
 div.flex>p,
 div.flex>em {
     width: 50%;
-
+    
 }
 
 div.flex.small,
@@ -280,8 +278,8 @@ div.flex.large>p {
 
 
 
-div.flex.large>em {
-    width: 40%;
+div.flex>em {
+
     position: absolute;
     right: 0;
     height: 50%;
@@ -290,6 +288,10 @@ div.flex.large>em {
     bottom: 0;
     margin: auto;
     z-index: 1;
+}
+
+div.flex.large>em {
+    width: 40%;
 }
 
 
@@ -314,11 +316,9 @@ td.greenb,
 td.redb {
     font-weight: 900;
 }
-
 td.check {
     font-size: 4rem;
 }
-
 td.greenb,
 td.redb {
     font-size: 5rem;
@@ -465,7 +465,7 @@ th>select {
 
 
 
-th.half {
+th.half{
     font-size: 75%;
 }
 
@@ -634,7 +634,7 @@ table.summary {
 }
 
 table.summary tr td,
-table.summary tr th {
+table.summary tr th{
     filter: drop-shadow(0 0 2rem black);
     box-shadow: inset 0 0 5rem var(--color3);
 }
