--- a/client/src/modules/COMMON/components/TableMain/TableMain.css
+++ b/client/src/modules/COMMON/components/TableMain/TableMain.css
@@ -84,6 +84,7 @@ div.secondary.nav p.username:hover {
     z-index: 2;
     background-color: black;
     width: fit-content;
+    box-shadow: 0 0 1.5rem white;
     
 }
 
