--- a/client/src/modules/COMMON/components/TableMain/TableMain.css
+++ b/client/src/modules/COMMON/components/TableMain/TableMain.css
@@ -25,6 +25,7 @@ ol.page_numbers>li.active {
     border: 0.1rem ridge var(--color2);
 
 }
+
 div.trade_search_wrapper {
     display: flex;
     position: relative;
@@ -33,6 +34,7 @@ div.trade_search_wrapper {
     margin: auto;
     flex-direction: column;
 }
+
 div.nav {
     display: flex;
     height: 7rem;
@@ -70,7 +72,7 @@ div.secondary.nav p.username {
     color: var(--te);
     overflow: hidden;
     text-overflow: ellipsis;
-    white-space: nowrap;    
+    white-space: nowrap;
     width: 100%;
 }
 
@@ -85,15 +87,15 @@ div.secondary.nav p.username:hover {
     background-color: black;
     width: fit-content;
     box-shadow: 0 0 1.5rem white;
-    
+
 }
 
 div.nav>div>span {
     width: 40%;
-    position: relative;  
+    position: relative;
     display: flex;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
 }
 
 div.nav>div>button {
@@ -251,7 +253,7 @@ div.flex>span,
 div.flex>p,
 div.flex>em {
     width: 50%;
-    
+
 }
 
 div.flex.small,
@@ -317,9 +319,11 @@ td.greenb,
 td.redb {
     font-weight: 900;
 }
+
 td.check {
     font-size: 4rem;
 }
+
 td.greenb,
 td.redb {
     font-size: 5rem;
@@ -402,6 +406,7 @@ table.body td.left:hover>p {
     padding-right: 2rem;
 }
 
+th:last-of-type:hover,
 table.body td.left:last-child:hover {
     direction: rtl;
 }
@@ -466,7 +471,7 @@ th>select {
 
 
 
-th.half{
+th.half {
     font-size: 75%;
 }
 
@@ -485,6 +490,36 @@ th>p.select {
     white-space: nowrap;
     display: block;
     z-index: 0;
+    height: 7rem;
+    line-height: 7rem;
+}
+
+th.small.half>p.select {
+    height: 3.5rem;
+    line-height: 3.5rem;
+    position: relative;
+    width: 100%;
+}
+
+th>p.select:hover {
+    overflow: visible;
+    width: fit-content;
+    background-color: black;
+    position: absolute;
+    z-index: 2;
+    box-shadow: 0 0 1.5rem white;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
+th.small.half>p.select:hover {
+    padding-left: 1rem;
+    padding-right: 1rem;
+    width: fit-content;
 }
 
 th>p.select>select.hidden_behind {
@@ -635,7 +670,7 @@ table.summary {
 }
 
 table.summary tr td,
-table.summary tr th{
+table.summary tr th {
     filter: drop-shadow(0 0 2rem black);
     box-shadow: inset 0 0 5rem var(--color3);
 }
